client/src/scss/utils/buttons.scss
@use "../palette.scss";
@use "../variables.scss";

.btn {
  display: block;
  position: relative;

  color: #ffffff;
  cursor: pointer;

  font-size: 20px;

  padding: 8px 15px;

  border: none;
  border-radius: 10px;

  text-decoration: none;
  text-shadow: 3px 3px 8px #00000064;
}

.btn-lg {
  height: 45px;
}

// Button hover interaction
.btn-darken {
  border: none;
  transition: filter 0.25s ease;
}

.btn-icon {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
  margin-left: 8px;
  height: 60%;
  @include variables.drop-shadow;
}

#btn-play-duo span {
  margin-left: 20px;
}

#btn-play-squad span {
  margin-left: 27px;
}

.link-darken:hover,
.link-darken:active,
.btn-darken:hover,
.btn-darken:active {
  color: inherit;
  filter: brightness(80%);
}

.btn-disabled {
  filter: brightness(75%) saturate(75%);
  pointer-events: none;
  user-select: none;
}

// Regular buttons
.btn-primary {
  background: palette.$blue;
  border-bottom: 2px solid palette.$blue_bg;
  box-shadow: inset 0 -2px palette.$blue_bg;
}

.btn-secondary {
  background: palette.$grey;
  border-bottom: 2px solid palette.$grey_bg;
  box-shadow: inset 0 -2px palette.$grey_bg;
}

.btn-danger {
  background: palette.$danger;
  border-bottom: 2px solid palette.$transparent_bg;
  box-shadow: inset 0 -2px palette.$transparent_bg;
}

.btn-alert {
  margin-top: 10px;
  background: palette.$orange;
  border-bottom: 2px solid palette.$orange_bg;
  box-shadow: inset 0 -2px palette.$orange_bg;
}

.btn-purple {
  background: palette.$purple;
  border-bottom: 2px solid palette.$purple_bg;
  box-shadow: inset 0 -2px palette.$purple_bg;
}

.btn-success {
  background: palette.$grass_bg;
  border-bottom: 2px solid palette.$success;
  box-shadow: inset 0 -2px palette.$success;
}

.btn-kofi {
  background: palette.$kofi;
  border-bottom: 2px solid palette.$kofi_bg;
  box-shadow: inset 0 -2px palette.$kofi_bg;

  img {
    @include variables.drop-shadow;
  }
}

// Socials
.btn-social {
  display: inline-block;

  height: 45px;
  width: 45px;

  font-size: large;

  border: none;
  border-radius: 12px;

  background-size: 65%;
  background-position: center;
  background-repeat: no-repeat;
  text-align: center;
}

.btn-bsky {
  background-image: url("/img/socials/bsky.svg");
  background-color: palette.$bsky;
  box-shadow: inset 0 -4px palette.$bsky_bg;
}

.btn-instagram {
  background-image: url("/img/socials/instagram.svg");
  background-color: palette.$instagram;
  background-position-y: calc(50% - 2px);
  box-shadow: inset 0 -4px palette.$instagram_bg;
}

.btn-instagram {
  background-image: url("/img/socials/instagram.svg");
  background-color: palette.$instagram;
  box-shadow: inset 0 -4px palette.$instagram_bg;
}

.btn-reddit {
  background-image: url("/img/socials/reddit.svg");
  background-color: palette.$reddit;
  background-position-y: calc(50% - 1px);
  box-shadow: inset 0 -4px palette.$reddit_bg;
}

.btn-discord {
  background-image: url("/img/socials/discord.svg");
  background-color: palette.$discord;
  box-shadow: inset 0 -4px palette.$discord_bg;
}

.btn-youtube {
  background-image: url("/img/socials/youtube.svg");
  background-color: palette.$youtube;
  background-position-y: calc(50% - 2px);
  box-shadow: inset 0 -4px palette.$youtube_bg;
}

.btn-github {
  background-image: url("/img/socials/github.svg");
  background-color: palette.$github;
  background-position-y: calc(50% - 1px);
  box-shadow: inset 0 -4px palette.$github_bg;
}

.btn-wiki {
  background-color: palette.$orange;
  box-shadow: inset 0 -4px palette.$orange_bg;
}

.btn-kofi, .btn-wiki {
  height: 45px;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 8px;

  &:hover {
    text-decoration: none;
  }
}

.btn-bind {
  display: flex;
  font-size: 14px;
  margin-inline: 2.5%;
  width: 45%;

  &.active {
    outline: 5px solid palette.$blue;
  }
}

.btn-spectate-kill-leader {
  background: palette.$orange;
  border-bottom: 2px solid palette.$orange_bg;
  box-shadow: inset 0 -2px palette.$orange_bg;
}

.btn-donate {
  transition: 0.25s;
  display: flex;
  justify-content: center;
  align-items: center;
  background: #f258b7;
  border-bottom: 2px solid #e340a4;
  box-shadow: inset 0 -2px #e340a4;

  &:hover {
    transition: 0.25s;
    box-shadow: inset 0 -2px #e340a4, 0 0 15px rgba(255, 255, 255, 1);
  }

  a:hover {
    text-decoration: none;
  }

  i {
    margin-right: 5px;
  }
}

